# movieseatfinder

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.js  app.py  index.html  package-lock.json  package.json  playwright.mobile.config.mjs  pyproject.toml  run.py  server.py  styles.css
.github/workflows/: tests.yml
backend/: __init__.py  application.py  location.py  seat_matching.py  server.py
frontend/: app.js  combo.js  dom.js  format-picker.js  index.html  results.js  seat-grid.js  site.webmanifest  styles.css  ui.js  utils.js
static/: app.js  index.html  styles.css
tests/: frontend-utils.test.mjs  mobile.integration.spec.mjs  playwright.mobile.config.mjs  test_application.py  test_server.py
