[project]
name = "movieseatfinder"
version = "0.1.0"
description = "Find movie showtimes by the seats that are actually available."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "requests>=2.32.0",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
test = [
    "httpx>=0.28.0",
]

[tool.setuptools]
packages = ["backend"]
py-modules = ["app"]
